[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/startMenu/startMenu.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Menu/menu_script.gd" type="Script" id=2]
[ext_resource path="res://src/Styles/mainTheme.tres" type="Theme" id=3]

[node name="MenuSceneParent" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 684.0
margin_top = 535.0
margin_right = -684.0
margin_bottom = -80.0
size_flags_horizontal = 0
size_flags_vertical = 2
custom_constants/separation = 57
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" type="Button" parent="ButtonsContainer"]
margin_right = 552.0
margin_bottom = 100.0
rect_min_size = Vector2( 552, 100 )
focus_mode = 0
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "Start game"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToPlayButton" type="Button" parent="ButtonsContainer"]
margin_top = 157.0
margin_right = 552.0
margin_bottom = 257.0
rect_min_size = Vector2( 552, 100 )
focus_mode = 0
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "How to play?"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitGameButton" type="Button" parent="ButtonsContainer"]
margin_top = 314.0
margin_right = 552.0
margin_bottom = 414.0
rect_min_size = Vector2( 552, 100 )
focus_mode = 0
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "Exit game"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="ButtonsContainer/StartGameButton" to="ButtonsContainer/StartGameButton" method="_on_StartGameButton_button_up"]
[connection signal="button_up" from="ButtonsContainer/HowToPlayButton" to="ButtonsContainer/StartGameButton" method="_on_HowToPlayButton_button_up"]
[connection signal="button_up" from="ButtonsContainer/ExitGameButton" to="ButtonsContainer/StartGameButton" method="_on_ExitGameButton_button_up"]
